agregamos que stok de producto no se modifique

--- a/src/main/resources/templates/producto/editar_producto.html
+++ b/src/main/resources/templates/producto/editar_producto.html
@@ -31,7 +31,7 @@
 	
 	    <div class="mb-3">
 	        <label for="stock" class="form-label">Stock</label>
-	        <input type="text" class="form-control" id="stock" name="stock" th:field="*{stock}">
+	        <input type="text" class="form-control" id="stock" name="stock" th:field="*{stock}" readonly>
 	    </div>
 	
 	    <div class="mb-3">
